--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,7 +1,5 @@
 {
   "name": "js-libp2p-nextjs-example",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,23 +9,31 @@
   "dependencies": {
     "@chainsafe/libp2p-noise": "^11.0.0",
     "@chainsafe/libp2p-yamux": "^3.0.5",
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@libp2p/bootstrap": "^6.0.0",
     "@libp2p/kad-dht": "^7.0.0",
     "@libp2p/peer-id": "^2.0.1",
-    "@libp2p/tcp": "^6.1.2",
     "@libp2p/websockets": "^5.0.3",
     "@libp2p/webtransport": "^1.0.7",
-    "blockstore-core": "^3.0.0",
-    "datastore-core": "^8.0.4",
-    "libp2p": "^0.42.2",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "blockstore-core": "^3.0.0",
+    "datastore-core": "^8.0.4",
+    "datastore-idb": "^1.1.0",
+    "datastore-level": "^9.0.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "libp2p": "^0.42.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
