--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.2.3",
     "libp2p": "^0.42.2",
     "next": "13.2.3",
+    "private-ip": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
