--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@libp2p/bootstrap": "^6.0.0",
+    "@libp2p/delegated-peer-routing": "^4.0.0",
     "@libp2p/kad-dht": "^7.0.0",
     "@libp2p/peer-id": "^2.0.1",
     "@libp2p/websockets": "^5.0.3",
@@ -24,12 +25,14 @@
     "datastore-level": "^9.0.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "kubo-rpc-client": "^3.0.1",
     "libp2p": "^0.42.2",
     "next": "13.2.3",
     "private-ip": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
