--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -23,6 +23,7 @@
     "blockstore-core": "^3.0.0",
     "datastore-core": "^8.0.4",
     "datastore-level": "^9.0.4",
+    "debug": "^4.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "kubo-rpc-client": "^3.0.1",
