--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-libp2p-examples",
+  "name": "libp2p-universal-connectivity",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
