--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-libp2p-tcp-example",
+  "name": "universal-connectivity-node",
   "version": "1.0.0",
   "private": false,
   "type": "module",
