--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 futures = "0.3.27"
-libp2p = {version="0.51.1", features = ["tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
+libp2p = {version="0.51.1", features = ["ping", "tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
 rand = "0.8.5"
 tokio = { version= "1.26.0", features=["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
