--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 env_logger = "0.10.0"
 futures = "0.3.27"
-libp2p = {git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version="0.51.1", features = ["identify", "ping", "tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
+libp2p = {path = "/Users/prithvi/lab/vner/libp2p", features = ["identify", "ping", "tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
 rand = "0.8.5"
 tokio = { version= "1.26.0", features=["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
