Fix missing SUBSCRIBE and refactor
Depend on latest commits on https://github.com/libp2p/rust-libp2p/pull/3625 more
specifically
https://github.com/libp2p/rust-libp2p/pull/3625/commits/b5728952464f570c5636f5e6a4fa2448e28f3cbe
resolving the missing SUBSCRIBE message previously not send by a rust-libp2p server.

Additional refactorings:

- Use clap to parse command line arguments. Among other things gives us nice
help text and better error messages.
- Depend on `libp2p-webrtc` directly as we will remove the re-export from
`libp2p`.
- Use `futures-timer` to send `Hello World` on a 2 second interval instead of on
each `SwarmEvent`.
- Redo logging on various levels (warn, info, debug).

--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+clap = { version = "4.1.11", features = ["derive"] }
 env_logger = "0.10.0"
 futures = "0.3.27"
+futures-timer = "3.0.2"
 libp2p = {git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version="0.51.2", features = ["identify", "ping", "tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
+libp2p-webrtc = {git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version="0.4.0-alpha.4", features = ["tokio"] }
+log = "0.4.17"
 rand = "0.8.5"
 tokio = { version= "1.26.0", features=["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
