--- a/.github/workflows/build-go-server.yaml
+++ b/.github/workflows/build-go-server.yaml
@@ -12,9 +12,9 @@ env:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: go-server
+    # defaults:
+    #   run:
+    #     working-directory: go-server
     permissions:
       contents: read
       packages: write
