--- a/.github/workflows/build-go-server.yaml
+++ b/.github/workflows/build-go-server.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  NAMESPACE: libp2p
   IMAGE_NAME: universal-connectivity-go
 
 jobs:
@@ -32,7 +33,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/${{ env.IMAGE_NAME }}
       # - name: Set up Docker Buildx
       #   uses: docker/setup-buildx-action@v2
       - name: Build and push Docker image
