--- a/.github/workflows/deploy-go-server.yaml
+++ b/.github/workflows/deploy-go-server.yaml
@@ -39,39 +39,39 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Google Auth
-        id: auth
-        uses: 'google-github-actions/auth@v0'
-        with:
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-
-      # NOTE: Alternative option - authentication via credentials json
       # - name: Google Auth
       #   id: auth
       #   uses: 'google-github-actions/auth@v0'
       #   with:
-      #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      #     workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+      #     service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
+
+      # NOTE: Alternative option - authentication via credentials json
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
       # Authenticate Docker to Google Cloud Artifact Registry
+      # - name: Docker Auth
+      #   id: docker-auth
+      #   uses: 'docker/login-action@v1'
+      #   with:
+      #     username: 'oauth2accesstoken'
+      #     password: '${{ steps.auth.outputs.access_token }}'
+      #     registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+
+      # NOTE: Alternative option - authentication via credentials json
       - name: Docker Auth
         id: docker-auth
         uses: 'docker/login-action@v1'
         with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.access_token }}'
-          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
-          
-      # NOTE: Alternative option - authentication via credentials json
-      # - name: Docker Auth
-      # id: docker-auth
-      # uses: 'docker/login-action@v1'
-      # with:
-      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-      #   username: _json_key
-      #   password: ${{ secrets.GCP_CREDENTIALS }}
+          registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Build and Push Container
         run: |-
