--- a/.github/workflows/deploy-go-server.yaml
+++ b/.github/workflows/deploy-go-server.yaml
@@ -16,7 +16,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - $default-branch
+      - main
 
 env:
   PROJECT_ID: "universal-connectivity" #  Google Cloud project id
