Add blocky identicons to chat message UI
- Refactor the chat message into a separate component to allow integration
of blockies in the `useEffect` hook.
- Get peer ID string of every sender and use it as a seed to each blocky.
- FIXME: TypeScript yells that 'from' doesn't exist in type 'Message', which
apparently is a variant type of either 'SignedMessage' or 'UnsignedMessage', of
which the first contains 'from' attribute. Currently the 'Message' is being casted
as 'any' as a quick fix for this.

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,6 +10,7 @@
     "@chainsafe/libp2p-gossipsub": "6.2.0",
     "@chainsafe/libp2p-noise": "^11.0.0",
     "@chainsafe/libp2p-yamux": "^3.0.5",
+    "@download/blockies": "^1.0.3",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
     "@libp2p/bootstrap": "^6.0.0",
