--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,9 +17,10 @@
     "@libp2p/delegated-peer-routing": "^4.0.0",
     "@libp2p/kad-dht": "^7.0.0",
     "@libp2p/peer-id": "^2.0.1",
-    "@libp2p/webrtc": "^1.0.4",
+    "@libp2p/webrtc": "github:libp2p/js-libp2p-webrtc#feat/browser-to-browser",
     "@libp2p/websockets": "^5.0.3",
     "@libp2p/webtransport": "^1.0.7",
+    "@multiformats/multiaddr": "^12.0.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -30,7 +31,7 @@
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "kubo-rpc-client": "^3.0.1",
-    "libp2p": "^0.42.2",
+    "libp2p": "^0.43.0",
     "next": "13.2.3",
     "private-ip": "^3.0.0",
     "react": "18.2.0",
