--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -11,7 +11,7 @@ clap = { version = "4.1.11", features = ["derive"] }
 env_logger = "0.10.0"
 futures = "0.3.27"
 futures-timer = "3.0.2"
-libp2p = { git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version = "0.51.2", features = [
+libp2p = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", version = "0.51.2", features = [
 	"identify",
 	"ping",
 	"tokio",
@@ -23,7 +23,7 @@ libp2p = { git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "depr
 	"rsa",
 	"ed25519",
 ] }
-libp2p-webrtc = { git = "https://github.com/vnermolaev/rust-libp2p.git", branch = "deprecate/gossipsub-close-event", version = "0.4.0-alpha.4", features = [
+libp2p-webrtc = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", version = "0.4.0-alpha.4", features = [
 	"tokio",
 ] }
 log = "0.4.17"
