--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,7 +17,7 @@
     "@libp2p/delegated-peer-routing": "^4.0.0",
     "@libp2p/kad-dht": "^7.0.0",
     "@libp2p/peer-id": "^2.0.1",
-    "@libp2p/webrtc": "github:libp2p/js-libp2p-webrtc#feat/browser-to-browser",
+    "@libp2p/webrtc": "^1.1.0" ,
     "@libp2p/websockets": "^5.0.3",
     "@libp2p/webtransport": "^1.0.7",
     "@multiformats/mafmt": "^12.0.0",
