--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -27,6 +27,7 @@ libp2p-webrtc = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "
 	"tokio",
 ] }
 log = "0.4.17"
+multiaddr = { git = "https://github.com/p-shahi/rust-multiaddr.git", branch = "support-webrtc-protocol-code" }
 rand = "0.8.5"
 tokio = { version = "1.26.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
