--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,7 +16,7 @@
     "@libp2p/bootstrap": "^6.0.0",
     "@libp2p/kad-dht": "^8.0.6",
     "@libp2p/peer-id": "^2.0.1",
-    "@libp2p/webrtc": "git+https://github.com/libp2p/js-libp2p-webrtc#fix/update-multiformats",
+    "@libp2p/webrtc": "^1.1.2",
     "@libp2p/websockets": "^5.0.3",
     "@libp2p/webtransport": "^1.0.7",
     "@multiformats/mafmt": "^12.1.0",
