--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -22,10 +22,12 @@ libp2p = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "depreca
 	"kad",
 	"rsa",
 	"ed25519",
+	"quic",
 ] }
 libp2p-webrtc = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", version = "0.4.0-alpha.4", features = [
 	"tokio",
 ] }
+libp2p-quic = {  git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", features = ["tokio"] }
 log = "0.4.17"
 multiaddr = { git = "https://github.com/p-shahi/rust-multiaddr.git", branch = "support-webrtc-protocol-code" }
 rand = "0.8.5"
