--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -27,10 +27,11 @@ libp2p = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "depreca
 libp2p-webrtc = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", version = "0.4.0-alpha.4", features = [
 	"tokio",
 ] }
-libp2p-quic = {  git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", features = ["tokio"] }
+libp2p-quic = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "deprecate/gossipsub-close-event-update-multiaddr", features = [
+	"tokio",
+] }
 log = "0.4.17"
-multiaddr = { git = "https://github.com/p-shahi/rust-multiaddr.git", branch = "support-webrtc-protocol-code" }
+multiaddr = { version = "0.18.0", git = "https://github.com/multiformats/rust-multiaddr.git" }
 rand = "0.8.5"
 tokio = { version = "1.26.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
-webrtc = { version = "0.6.0", optional = true }
