--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -24,18 +24,11 @@ libp2p = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "master-
 	"ed25519",
 	"quic",
 ] }
+libp2p-webrtc = { git = "https://github.com/p-shahi/rust-libp2p.git", branch = "master-plus-webrtc-code", version = "0.4.0-alpha.4", features = [
+	"tokio",
+] }
+libp2p-quic = {  git = "https://github.com/p-shahi/rust-libp2p.git", branch = "master-plus-webrtc-code", features = ["tokio"] }
 log = "0.4.17"
 rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
-
-[dependencies.libp2p-webrtc]
-git = "https://github.com/p-shahi/rust-libp2p.git"
-branch = "master-plus-webrtc-code"
-version = "0.4.0-alpha.4"
-features = ["tokio"]
-
-[dependencies.libp2p-quic]
-git = "https://github.com/p-shahi/rust-libp2p.git"
-branch = "master-plus-webrtc-code"
-features = ["tokio"]
