--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,26 +7,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "6.2.0",
-    "@chainsafe/libp2p-noise": "^11.0.0",
-    "@chainsafe/libp2p-yamux": "^3.0.5",
+    "@chainsafe/libp2p-gossipsub": "^8.0.0",
+    "@chainsafe/libp2p-noise": "^12.0.1",
+    "@chainsafe/libp2p-yamux": "^4.0.2",
     "@download/blockies": "^1.0.3",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
-    "@libp2p/bootstrap": "^6.0.0",
-    "@libp2p/kad-dht": "^8.0.6",
-    "@libp2p/webrtc": "^1.1.2",
-    "@libp2p/websockets": "^5.0.3",
-    "@libp2p/webtransport": "^1.0.7",
-    "@multiformats/mafmt": "^12.1.0",
-    "@multiformats/multiaddr": "^12.1.1",
+    "@libp2p/bootstrap": "^8.0.0",
+    "@libp2p/interface-pubsub": "^4.0.1",
+    "@libp2p/kad-dht": "^9.3.6",
+    "@libp2p/webrtc": "^2.0.6",
+    "@libp2p/websockets": "^6.0.3",
+    "@libp2p/webtransport": "^2.0.1",
+    "@multiformats/mafmt": "^12.1.5",
+    "@multiformats/multiaddr": "^12.1.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "debug": "^4.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
-    "libp2p": "^0.44.0",
+    "libp2p": "^0.45.5",
     "next": "13.2.3",
     "private-ip": "^3.0.0",
     "react": "18.2.0",
