boilerplating for browser to browser with peer finding

--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "universal-connectivity-browser",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p ${PORT}",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
