--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -7,41 +7,43 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^10.1.0",
-    "@chainsafe/libp2p-noise": "^13.0.3",
-    "@chainsafe/libp2p-yamux": "^5.0.2",
+    "@chainsafe/libp2p-gossipsub": "^13.0.0",
+    "@chainsafe/libp2p-noise": "^15.0.0",
+    "@chainsafe/libp2p-yamux": "^6.0.2",
     "@download/blockies": "^1.0.3",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@libp2p/bootstrap": "^9.0.12",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@libp2p/bootstrap": "^10.0.16",
+    "@libp2p/circuit-relay-v2": "^1.0.16",
+    "@libp2p/identify": "^1.0.15",
     "@libp2p/interface-pubsub": "^4.0.1",
-    "@libp2p/kad-dht": "^10.0.15",
-    "@libp2p/webrtc": "^3.2.11",
-    "@libp2p/websockets": "^7.0.9",
-    "@libp2p/webtransport": "^3.1.10",
-    "@multiformats/multiaddr": "^12.1.10",
+    "@libp2p/kad-dht": "^12.0.9",
+    "@libp2p/webrtc": "^4.0.20",
+    "@libp2p/websockets": "^8.0.16",
+    "@libp2p/webtransport": "^4.0.20",
+    "@multiformats/multiaddr": "^12.2.0",
     "debug": "^4.3.4",
-    "it-length-prefixed": "^9.0.3",
-    "it-map": "^3.0.4",
+    "it-length-prefixed": "^9.0.4",
+    "it-map": "^3.0.5",
     "it-pipe": "^3.0.1",
-    "libp2p": "^0.46.21",
-    "next": "14.0.3",
+    "libp2p": "^1.2.4",
+    "next": "14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "uint8arrays": "^4.0.6",
-    "usehooks-ts": "^2.9.1",
+    "uint8arrays": "^5.0.2",
+    "usehooks-ts": "^3.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "20.10.3",
-    "@types/react": "18.2.41",
-    "@types/react-dom": "18.2.17",
-    "@types/uuid": "^9.0.5",
-    "autoprefixer": "^10.4.16",
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.0.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "5.3.2"
+    "@types/node": "20.11.25",
+    "@types/react": "18.2.64",
+    "@types/react-dom": "18.2.21",
+    "@types/uuid": "^9.0.8",
+    "autoprefixer": "^10.4.18",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.4.2"
   }
 }
