--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -10,14 +10,15 @@
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
-    "@download/blockies": "^1.0.3",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@libp2p/bootstrap": "^10.0.16",
     "@libp2p/circuit-relay-v2": "^1.0.16",
+    "@libp2p/dcutr": "^1.0.17",
     "@libp2p/identify": "^1.0.15",
     "@libp2p/interface-pubsub": "^4.0.1",
     "@libp2p/kad-dht": "^12.0.9",
+    "@libp2p/pubsub-peer-discovery": "^10.0.2",
     "@libp2p/webrtc": "^4.0.20",
     "@libp2p/websockets": "^8.0.16",
     "@libp2p/webtransport": "^4.0.20",
@@ -29,6 +30,7 @@
     "libp2p": "^1.2.4",
     "next": "14.1.3",
     "react": "18.2.0",
+    "react-18-blockies": "^1.0.6",
     "react-dom": "18.2.0",
     "uint8arrays": "^5.0.2",
     "usehooks-ts": "^3.0.1",
