--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
@@ -28,7 +29,7 @@
     "it-map": "^3.0.5",
     "it-pipe": "^3.0.1",
     "libp2p": "^1.2.4",
-    "next": "14.1.3",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.2.0",
@@ -37,15 +38,24 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.3.4",
     "@types/node": "20.11.25",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/typescript-estree": "^7.7.1",
     "autoprefixer": "^10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.35",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.3"
   }
 }
