--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -12,6 +12,7 @@
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@download/blockies": "^1.0.3",
     "@headlessui/react": "^1.7.19",
+    "@helia/delegated-routing-v1-http-api-client": "^3.0.1",
     "@heroicons/react": "^2.1.3",
     "@libp2p/bootstrap": "^10.0.20",
     "@libp2p/circuit-relay-v2": "^1.0.20",
@@ -22,6 +23,7 @@
     "@libp2p/websockets": "^8.0.20",
     "@libp2p/webtransport": "^4.0.27",
     "@multiformats/multiaddr": "^12.2.1",
+    "datastore-idb": "^2.1.9",
     "debug": "^4.3.4",
     "it-length-prefixed": "^9.0.4",
     "it-map": "^3.0.5",
