toast, P2PPinger, bumped deps, mobile design, linting, disabled input, protocol dropdown on peer, timestamps on messages

--- a/js-peer/.eslintrc.json
+++ b/js-peer/.eslintrc.json
@@ -33,7 +33,7 @@
       "version": "detect"
     }
   },
-  "ignorePatterns": ["node_modules/", "build/", ".next/", "lib/proto/"],
+  "ignorePatterns": ["node_modules/", "build/", ".next/", "src/lib/protobuf/"],
   "rules": {
     "prettier/prettier": [
       "warn",
