--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -7,7 +7,7 @@
     "lint": "npm run lint:fix && npm run tsc && npm run format",
     "lint:fix": "next lint --fix",
     "format": "npm run format:write",
-    "format:write": "prettier --write --loglevel warn .",
+    "format:write": "prettier --write --log-level warn .",
     "format:check": "prettier --list-different .",
     "tsc": "tsc --noEmit -p tsconfig.json",
     "protobuf": "protons src/lib/protobuf/*.proto"
@@ -62,10 +62,11 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.2",
     "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
-    "prettier": "^2.8.8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
