--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -19,6 +19,8 @@
     "@libp2p/identify": "^1.0.19",
     "@libp2p/interface-pubsub": "^4.0.1",
     "@libp2p/kad-dht": "^12.0.13",
+    "@libp2p/keychain": "^4.0.14",
+    "@libp2p/logger": "^4.0.12",
     "@libp2p/webrtc": "^4.0.28",
     "@libp2p/websockets": "^8.0.20",
     "@libp2p/webtransport": "^4.0.27",
