--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
       - run: cargo clippy
       - run: cargo test
   go-check:
-    uses: pl-strflt/uci/.github/workflows/go-check.yml@v0.0
+    uses: libp2p/uci/.github/workflows/go-check.yml@v0.0
     with:
       go-version: '1.21.x'
   go-test:
-    uses: pl-strflt/uci/.github/workflows/go-test.yml@v0.0
+    uses: libp2p/uci/.github/workflows/go-test.yml@v0.0
     with:
       go-versions: '["1.21.x"]'
