--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -11,7 +11,7 @@
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@download/blockies": "^1.0.3",
-    "@headlessui/react": "^1.7.19",
+    "@headlessui/react": "^2.0.1",
     "@helia/delegated-routing-v1-http-api-client": "^3.0.1",
     "@heroicons/react": "^2.1.3",
     "@libp2p/bootstrap": "^10.0.21",
@@ -24,6 +24,7 @@
     "@libp2p/websockets": "^8.0.20",
     "@libp2p/webtransport": "^4.0.28",
     "@multiformats/multiaddr": "^12.2.1",
+    "clsx": "^2.1.1",
     "debug": "^4.3.4",
     "it-length-prefixed": "^9.0.4",
     "it-map": "^3.1.0",
