--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -10,7 +10,6 @@
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@chainsafe/libp2p-yamux": "^6.0.2",
-    "@download/blockies": "^1.0.3",
     "@headlessui/react": "^2.0.1",
     "@helia/delegated-routing-v1-http-api-client": "^3.0.1",
     "@heroicons/react": "^2.1.3",
@@ -32,6 +31,7 @@
     "libp2p": "^1.5.1",
     "next": "14.2.2",
     "react": "18.2.0",
+    "react-18-blockies": "^1.0.6",
     "react-dom": "18.2.0",
     "uint8arrays": "^5.0.3",
     "usehooks-ts": "^3.1.0",
