--- a/js-peer/.eslintrc.json
+++ b/js-peer/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "@next/next/no-img-element": "off"
+  },
+  "ignorePatterns": ["node_modules/", "build/", ".next/", "src/lib/protobuf/"]
 }
