--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -1,10 +1,12 @@
 {
   "name": "universal-connectivity-browser",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tsc": "tsc --noEmit -p tsconfig.json",
+    "protobuf": "protons src/lib/protobuf/*.proto"
   },
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
@@ -28,8 +30,10 @@
     "it-length-prefixed": "^9.0.4",
     "it-map": "^3.1.0",
     "it-pipe": "^3.0.1",
+    "it-protobuf-stream": "^1.1.4",
     "libp2p": "^1.6.1",
     "next": "14.2.3",
+    "protons-runtime": "^5.4.0",
     "react": "18.3.1",
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.3.1",
@@ -46,6 +50,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "protons": "^7.5.0",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
