--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -9,37 +9,38 @@
     "protobuf": "protons src/lib/protobuf/*.proto"
   },
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^13.0.0",
-    "@chainsafe/libp2p-noise": "^15.0.0",
-    "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@chainsafe/libp2p-gossipsub": "^14.1.0",
+    "@chainsafe/libp2p-noise": "^16.0.0",
+    "@chainsafe/libp2p-yamux": "^7.0.1",
     "@headlessui/react": "^2.0.1",
-    "@helia/delegated-routing-v1-http-api-client": "^3.0.1",
+    "@helia/delegated-routing-v1-http-api-client": "^4.0.1",
     "@heroicons/react": "^2.1.3",
-    "@libp2p/bootstrap": "^10.0.22",
-    "@libp2p/circuit-relay-v2": "^1.0.25",
-    "@libp2p/identify": "^2.0.0",
+    "@libp2p/bootstrap": "^11.0.6",
+    "@libp2p/circuit-relay-v2": "^2.1.1",
+    "@libp2p/identify": "^3.0.6",
     "@libp2p/interface-pubsub": "^4.0.1",
-    "@libp2p/logger": "^4.0.10",
-    "@libp2p/pubsub-peer-discovery": "^10.0.2",
-    "@libp2p/webrtc": "^4.0.31",
-    "@libp2p/websockets": "^8.0.22",
-    "@libp2p/webtransport": "^4.0.32",
-    "@multiformats/multiaddr": "^12.2.1",
+    "@libp2p/logger": "^5.1.0",
+    "@libp2p/ping": "^2.0.6",
+    "@libp2p/pubsub-peer-discovery": "^11.0.0",
+    "@libp2p/webrtc": "^5.0.8",
+    "@libp2p/websockets": "^9.0.6",
+    "@libp2p/webtransport": "^5.0.8",
+    "@multiformats/multiaddr": "^12.3.1",
     "clsx": "^2.1.1",
-    "debug": "^4.3.4",
-    "it-length-prefixed": "^9.0.4",
-    "it-map": "^3.1.0",
+    "debug": "^4.3.7",
+    "it-length-prefixed": "^9.1.0",
+    "it-map": "^3.1.1",
     "it-pipe": "^3.0.1",
-    "it-protobuf-stream": "^1.1.4",
-    "libp2p": "^1.6.1",
-    "next": "14.2.3",
-    "protons-runtime": "^5.4.0",
+    "it-protobuf-stream": "^1.1.5",
+    "libp2p": "^2.1.4",
+    "next": "14.2.13",
+    "protons-runtime": "^5.5.0",
     "react": "18.3.1",
     "react-18-blockies": "^1.0.6",
     "react-dom": "18.3.1",
-    "uint8arrays": "^5.0.3",
+    "uint8arrays": "^5.1.0",
     "usehooks-ts": "^3.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "20.14.8",
@@ -50,7 +51,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
-    "protons": "^7.5.0",
+    "protons": "^7.6.0",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
   }
