--- a/.github/workflows/build-go-peer.yaml
+++ b/.github/workflows/build-go-peer.yaml
@@ -2,6 +2,9 @@ name: Build and publish go-peer Docker image
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
 
 env:
   REGISTRY: ghcr.io
