--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -1,9 +1,8 @@
-name: Continuous Integration
+name: rust-peer ci
 
 on: 
   pull_request:
     paths:
-      - 'go-peer/**'
       - 'rust-peer/**'
 
 concurrency:
@@ -25,11 +24,3 @@ jobs:
       - run: cargo fmt -- --check
       - run: cargo clippy
       - run: cargo test
-  go-check:
-    uses: libp2p/uci/.github/workflows/go-check.yml@v0.0
-    with:
-      go-version: '1.21.x'
-  go-test:
-    uses: libp2p/uci/.github/workflows/go-test.yml@v0.0
-    with:
-      go-versions: '["1.21.x"]'
