--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.1.11", features = ["derive", "env"] }
-env_logger = "0.10.0"
+env_logger = "0.11.4"
 futures = "0.3.27"
 futures-timer = "3.0.2"
-libp2p = { version = "0.52.3", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits"] }
-libp2p-webrtc = { version = "0.6.0-alpha", features = ["tokio", "pem"] }
+libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits"] }
+libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
 log = "0.4.17"
 rand = "0.8.5"
 tokio = { version = "1.27.0", features = ["full"] }
 tokio-util = { version = "0.7", features = ["full"] }
 async-trait = "0.1.68"
+unsigned-varint = "0.8.0"
