chore: update prettier config

--- a/js-peer/package.json
+++ b/js-peer/package.json
@@ -61,6 +61,8 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
-    "printWidth": 120
+    "printWidth": 120,
+    "tabWidth": 2,
+    "bracketSpacing": true
   }
 }
