ci: run frontend build only on changes to js-peer

--- a/.github/workflows/js-peer.yml
+++ b/.github/workflows/js-peer.yml
@@ -3,8 +3,12 @@ name: js-peer build
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'js-peer/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'js-peer/**'
 
 jobs:
   build-frontend:
