fix: docker image

--- a/go-peer/Dockerfile
+++ b/go-peer/Dockerfile
@@ -1,17 +1,16 @@
 # Use a specific version of golang alpine for better reproducibility
 FROM golang:1.23-alpine AS builder
 
-# Create a non-root user for running the application
-RUN adduser -D -g '' appuser
-
 WORKDIR /usr/src/app
 
-# pre-copy/cache go.mod for pre-downloading dependencies
+# Copy only the dependency files first
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
-# Copy the source code
-COPY . .
+# Copy source code, excluding unnecessary files
+COPY *.go ./
+COPY internal/ ./internal/
+COPY pkg/ ./pkg/
 
 # Build the application with security flags
 RUN CGO_ENABLED=0 go build -ldflags="-w -s" -v -o /usr/local/bin/universal-chat-go ./...
@@ -19,12 +18,19 @@ RUN CGO_ENABLED=0 go build -ldflags="-w -s" -v -o /usr/local/bin/universal-chat-
 # Create a minimal production image
 FROM alpine:latest
 
-# Add CA certificates for HTTPS
-RUN apk --no-cache add ca-certificates
+# Add CA certificates for HTTPS and create non-root user
+RUN apk --no-cache add ca-certificates && \
+    adduser -D appuser
+
+# Create a directory for the application and set proper permissions
+RUN mkdir -p /app/data && \
+    chown -R appuser:appuser /app
 
 # Copy the binary from builder
 COPY --from=builder /usr/local/bin/universal-chat-go /usr/local/bin/universal-chat-go
-COPY --from=builder /etc/passwd /etc/passwd
+
+# Set working directory
+WORKDIR /app/data
 
 # Use non-root user
 USER appuser
@@ -32,4 +38,4 @@ USER appuser
 # Expose port if your application needs it (uncomment and adjust if needed)
 EXPOSE 9050
 
-CMD ["universal-chat-go"]
+CMD ["universal-chat-go", "--headless"]
