--- a/.github/workflows/js-peer.yml
+++ b/.github/workflows/js-peer.yml
@@ -1,5 +1,10 @@
 name: js-peer build
 
+permissions:
+  contents: read
+  pull-requests: write
+  statuses: write
+
 on:
   push:
     branches: [main]
