add headless, kademlia, relay, dcutr, webrtc, peer discovery
Signed-off-by: Dave Grantham <dwg@linuxprogrammer.org>

--- a/rust-peer/Dockerfile
+++ b/rust-peer/Dockerfile
@@ -1,5 +1,5 @@
 # syntax=docker/dockerfile:1.5-labs
-FROM rust:1.72.0 as builder
+FROM rust:1.85.1 as builder
 
 RUN rustup target add x86_64-unknown-linux-musl
 RUN --mount=type=cache,target=/var/cache/apt apt-get update && apt-get install -y musl-dev musl-tools
@@ -11,14 +11,23 @@ RUN --mount=type=cache,target=./target \
     --mount=type=cache,target=/usr/local/cargo/registry \
     cargo build --release --target x86_64-unknown-linux-musl
 
+#RUN --mount=type=cache,target=./target \
+#    mv ./target/x86_64-unknown-linux-musl/release/main /usr/local/bin/rust-libp2p-webrtc-peer
+
 RUN --mount=type=cache,target=./target \
-    mv ./target/x86_64-unknown-linux-musl/release/rust-libp2p-webrtc-peer /usr/local/bin/rust-libp2p-webrtc-peer
+    mv ./target/x86_64-unknown-linux-musl/release/main /usr/local/bin/rust-libp2p-webrtc-peer && \
+    ls -lh /usr/local/bin/rust-libp2p-webrtc-peer
 
 FROM alpine:3
 WORKDIR /app
-COPY --from=builder /usr/local/bin/rust-libp2p-webrtc-peer /usr/bin/rust-libp2p-webrtc-peer
+COPY --from=builder /usr/local/bin/rust-libp2p-webrtc-peer /usr/local/bin/rust-libp2p-webrtc-peer
 RUN --mount=type=cache,target=/var/cache/apk apk add bind-tools
+RUN ulimit -n 65536
+RUN mkdir /app/certificates
 
 ENV RUST_BACKTRACE=1
+EXPOSE 9090
+EXPOSE 9091
+EXPOSE 9092
 
-CMD ["rust-libp2p-webrtc-peer"]
+CMD ["rust-libp2p-webrtc-peer", "--headless"]
