--- a/rust-peer/Cargo.toml
+++ b/rust-peer/Cargo.toml
@@ -12,11 +12,14 @@ clap = { version = "4.5.32", features = ["derive", "env"] }
 crossterm = "0.28.1"
 futures = "0.3.31"
 futures-timer = "3.0.3"
-libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits", "tcp", "noise", "yamux"] }
+hex = "0.4.3"
+libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits", "tcp", "noise", "yamux", "autonat", "tls", "dcutr"] }
 libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
+quick-protobuf = "0.8.1"
 rand = "0.8.5"
 ratatui = "0.29.0"
 serde_json = "1.0.140"
+signal-hook = "0.3.17"
 tokio = { version = "1.44.1", features = ["full"] }
 tokio-util = { version = "0.7.14", features = ["full"] }
 tracing = "0.1.41"
