feat: add Kivy UI support and update dependencies for mobile-friendly interface

--- a/py-peer/pyproject.toml
+++ b/py-peer/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "protobuf",
     "janus>=1.0.0",
     "trio_asyncio",
-    
+    "kivy>=2.3.0",
+    "kivymd>=1.2.0",
 ]
 
 [project.scripts]
