fix: go tui updates (#313)
* remove stdout logging when using tui
* scroll messages and system messages
* bump docker alpine version
* use correct peer id for messages
* bumped deps
* bump to Go 1.25.4
* enable mouse support

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -1,9 +1,9 @@
 name: go-peer ci
 
-on: 
+on:
   pull_request:
     paths:
-      - 'go-peer/**'
+      - "go-peer/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -13,8 +13,8 @@ jobs:
   go-check:
     uses: ipdxco/unified-github-workflows/.github/workflows/go-check.yml@v0.0
     with:
-      go-version: '1.23.x'
+      go-version: "1.25.x"
   go-test:
     uses: ipdxco/unified-github-workflows/.github/workflows/go-test.yml@v0.0
     with:
-      go-versions: '["1.23.x"]'
+      go-versions: '["1.25.x"]'
