fix: update libp2p dependency to specific commit and clean up bootstrap peers

--- a/py-peer/pyproject.toml
+++ b/py-peer/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "textual>=0.47.0",
-    "libp2p>=0.3.0",
+    "libp2p @ git+https://github.com/sumanjeet0012/py-libp2p.git@611a6213327fddca5a753b7cfa3ca900ac01d4d8",
     "trio>=0.22.0",
     "base58",
     "protobuf",
